# maestro

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
maestro/: __init__.py  agents.py  cli.py  config.py  engine.py  env.py  events.py  observability.py  orchestrator.py  prompts.py  types.py
maestro/brains/: __init__.py  base.py  openai.py  simulated.py
maestro/server/: __init__.py  app.py  schemas.py
maestro/server/static/: app.js  index.html  styles.css
maestro/tools/: __init__.py  base.py  calculator.py  search.py
tests/: conftest.py  test_agents.py  test_api.py  test_brains.py  test_config.py  test_engine.py  test_env.py  test_events.py  test_observability.py  test_orchestrator.py  test_tools.py
