[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maestro-ai"
version = "0.1.0"
description = "A live multi-agent orchestration studio. Give it a goal and watch a team of AI agents plan, research, critique, and deliver in real time."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Saad Asif", email = "saadasif7a@gmail.com" }]
keywords = [
    "multi-agent",
    "agents",
    "orchestration",
    "llm",
    "ai",
    "observability",
    "fastapi",
    "websocket",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.9",
]

[project.scripts]
maestro = "maestro.cli:main"

[project.urls]
Homepage = "https://github.com/SaadAsif-NU/maestro"
Repository = "https://github.com/SaadAsif-NU/maestro"

[tool.hatch.build.targets.wheel]
packages = ["maestro"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4", "ASYNC"]
# UP041 would rewrite asyncio.TimeoutError to TimeoutError, which breaks the
# except clause on Python 3.10 (where they are distinct classes).
ignore = ["E501", "UP041"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
files = ["maestro"]
